--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name"            : "blogdown",
   "version"         : "0.1.0",
-  "description"     : "Mardown blogging tool",
-  "keywords"        : ["blogging", "markdown"],
+  "description"     : "Generate HTML with Mustache and Markdown",
+  "keywords"        : ["html", "generator", "mustache", "markdown"],
   "author"          : "Maximilian Antoni (http://maxantoni.de)",
-  "homepage"        : "http://mantoni.github.com/blogdown",
+  "homepage"        : "http://github.com/mantoni/blogdown",
   "main"            : "./lib/blogdown.js",
   "bin"             : "bin/blogdown.bin.js",
   "engines"         : {
@@ -27,7 +27,7 @@
     "utest"         : "~0.0.6",
     "urun"          : "~0.0.6",
     "sinon"         : "~1.6.0",
-    "autolint"      : "~1.0.4"
+    "autolint"      : "~1.1.3"
   },
   "files"           : ["lib", "README.md", "LICENSE"]
 }
