--- a/package.json
+++ b/package.json
@@ -29,5 +29,5 @@
     "sinon"         : "~1.6.0",
     "autolint"      : "~1.1.3"
   },
-  "files"           : ["lib", "README.md", "LICENSE"]
+  "files"           : ["bin", "lib", "README.md", "LICENSE"]
 }
