--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "marked"        : "~0.2.8",
     "mustache"      : "~0.7.2",
     "listen"        : "~0.3.1",
-    "moment"        : "~2.0.0"
+    "moment"        : "~2.0.0",
+    "optimist"      : "~0.3.7"
   },
   "devDependencies" : {
     "utest"         : "~0.0.6",
