--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name"            : "blogdown",
   "version"         : "0.7.0",
   "description"     : "Generate HTML with Mustache and Markdown",
-  "keywords"        : ["html", "generator", "mustache", "markdown"],
+  "keywords"        : ["html", "generator", "mustache", "markdown", "blog"],
   "author"          : "Maximilian Antoni (http://maxantoni.de)",
   "homepage"        : "http://github.com/mantoni/blogdown",
   "main"            : "./lib/blogdown.js",
@@ -20,7 +20,7 @@
   "dependencies"    : {
     "marked"        : "~0.2.8",
     "mustache"      : "~0.7.2",
-    "listen"        : "~0.3.1",
+    "listen"        : "~0.4.0",
     "moment"        : "~2.0.0",
     "optimist"      : "~0.3.7"
   },
@@ -30,5 +30,5 @@
     "sinon"         : "~1.6.0",
     "autolint"      : "~1.1.3"
   },
-  "files"           : ["bin", "lib", "README.md", "LICENSE"]
+  "files"           : ["bin", "lib", "README.md", "CHANGES.md", "LICENSE"]
 }
