--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
   },
   "devDependencies": {
     "eslint": "^3.19.0",
-    "sinon": "~1.6.0",
+    "sinon": "^2.3.2",
     "urun": "~0.0.6",
     "utest": "~0.0.6"
   },
