--- a/package.json
+++ b/package.json
@@ -26,11 +26,11 @@
     "url": "https://github.com/mantoni/blogdown.git"
   },
   "dependencies": {
-    "marked": "~0.2.8",
-    "mustache": "~0.7.2",
-    "listen": "~0.4.0",
-    "moment": "~2.0.0",
-    "optimist": "~0.3.7"
+    "listen": "^1.0.1",
+    "marked": "^0.3.6",
+    "moment": "^2.18.1",
+    "mustache": "^2.3.0",
+    "optimist": "^0.6.1"
   },
   "devDependencies": {
     "eslint": "^3.19.0",
