Use @studio/changes and remove Makefile

--- a/package.json
+++ b/package.json
@@ -20,7 +20,10 @@
     "lint": "eslint .",
     "test": "mocha",
     "watch": "mocha --watch",
-    "posttest": "npm run lint"
+    "posttest": "npm run lint",
+    "preversion": "npm test",
+    "version": "changes",
+    "postversion": "git push --follow-tags && npm publish"
   },
   "repository": {
     "type": "git",
@@ -34,6 +37,7 @@
     "optimist": "^0.6.1"
   },
   "devDependencies": {
+    "@studio/changes": "^1.2.0",
     "eslint": "^3.19.0",
     "mocha": "^3.4.2",
     "sinon": "^2.3.2"
